--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "d3": "^7.6.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.1.15",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
