--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "authentication_apis",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
+  "description": "## Introduction",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "build": "tsc"
+    "start": "node src/dist/index.js",
+    "build": "tsc",
+    "dev": "tsc -w & nodemon src/dist/index.js",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.10.0"
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.1",
+    "eslint": "^8.34.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "typescript": "^4.9.5"
   }
 }
