--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongoose": "^6.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.1",
     "eslint": "^8.34.0",
     "nodemon": "^2.0.15",
