--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "tsc -w & nodemon src/dist/index.js",
     "lint": "eslint . --ext .ts"
